@@ -5,15 +5,16 @@ and quirks that I need to fix eventually.
 
 + before 4.1pre1:
 
-- changing edit mode is broken, but only in untitled files it seems
-- fix print spacing problem
-- debug rectangular selection
 - fix fsb infinite requests problem, in fact fsb tree expansion state
   preservation seems to be broken
 - change indentPrevLine to indentOneLine and indentSubsequentLines
+- better trailing EOL handling
+- when deleting vertical text, etc new caret position is somewhat
+  counter-intuitive
 
 + later:
 
+- add tip/doc about drag-scroll behavior with range and rect selections
 - minor quicknotepad changes -- update docs
 - add documentation for pre1 features
 - rect select: support shift-left/right
